--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="logo" src="../images/logo.png" />
         <!-- <h3 id="logoText">youface</h3> -->
         <ul id="navLinks">
-            <li class="pill">Join the waitlist</li>
+            <a href="#joinTheList"><li class="pill">Join the waitlist</li></a>
             <li>Features</li>
             <li>Contact</li>
             <li class="pill purple">Login</li>
@@ -40,9 +40,9 @@
         </section>
 
         <!-- <form> -->
-        <button class="pill hangingButton">
+        <a href="#joinTheList" class="pill hangingButton">
             Join the waitlist
-        </button>
+        </a>
         <!-- </form> -->
 
     </div>
@@ -54,11 +54,11 @@
 
         <div id="kidsImages">
             <div class="happyBoy">
-                <img class="roundImage" src="./images/happyboy1.gif" />
+                <img loading="lazy" class="roundImage" src="./images/happyboy1.gif" />
                 <div class="rec">REC <sup>•</sup></div>
             </div>
             <div class="happyBoy">
-                <img class="roundImage" src="./images/happyboy2.gif" />
+                <img loading="lazy" class="roundImage" src="./images/happyboy2.gif" />
                 <div class="rec">REC <sup>•</sup></div>
             </div>
         </div>
@@ -103,13 +103,13 @@
 
         <div class="hero">
             <div class="happyBoy">
-                <img class="roundImage" src="./images/teacher2.gif" />
+                <img loading="lazy" class="roundImage" src="./images/teacher2.gif" />
                 <div class="rec">REC <sup>•</sup></div>
             </div>
 
             <div class="happyBoy">
 
-                <img class="roundImage" src="./images/teacher1.gif" />
+                <img loading="lazy" class="roundImage" src="./images/teacher1.gif" />
                 <div class="rec">REC <sup>•</sup></div>
             </div>
 
