--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav>
-        <img id="logo" src="../images/logo.png" />
+        <img id="logo" src="./images/logo.png" />
         <!-- <h3 id="logoText">youface</h3> -->
         <ul id="navLinks">
             <a href="#joinTheList"><li class="pill">Join the waitlist</li></a>
