--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="main">
 
-        <h2>More then 500+ smart kids (like you)<br></h2>
+        <h2>More than 500+ smart kids (like you)<br></h2>
         <h2>are already using Youface</h2>
 
         <div id="kidsImages">
@@ -85,7 +85,7 @@
                     <ul>
                         <li><b>Stand out</b> to your friends with impactful and memorable video messages.</li>
                         <li><b>Show your personality</b> to create warm connections and build trust</li>
-                        <li><b>Boost response rates</b>, book meeting and sell more.</li>
+                        <li><b>Boost response rates</b>, book meetings, and sell more.</li>
                     </ul>
 
                 </div>
